--- a/gb/15/9/22/n4533064.md
+++ b/gb/15/9/22/n4533064.md
@@ -1,6 +1,6 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/spd2854/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/spd2854/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/spd2854/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/spd2854/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/spd2854/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/spd2854/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/spd2854/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/spd2854/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/spd2854/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/spd2854/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/spd2854/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/spd2854/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/spd2854/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/spd2854/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/spd2854/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/spd2854/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/spd2854/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/spd2854/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/spd2854/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/spd2854/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/spd2854/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/spd2854/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/spd2854/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/spd2854/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/spd2854/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/spd2854/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/spd2854/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/spd2854/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/spd2854/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/spd2854/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/spd2854/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/spd2854/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/spd2854/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/spd2854/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/spd2854/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/spd2854/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/spd2854/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/spd2854/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/spd2854/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/spd2854/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/spd2854/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/spd2854/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/spd2854/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/spd2854/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/spd2854/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>抓捕江泽民 习近平可破乱局</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2015/09/1509221336551657-600x400.jpg" />
 <h6>“射人先射马，擒贼先擒王。”唐朝诗人杜甫这句千古名言告诉作战者要先除敌之首恶。（大纪元）
@@ -10,8 +10,8 @@
 <p>1976年10月6日晚，中国发生巨变。时任中共中央第一副主席、国务院总理华国锋联合中共中央副主席叶剑英和中办主任汪东兴等人抓捕时任中共中央政治局委员王洪文、张春桥、江青、姚文元（即四人帮成员）。</p>
 <p>当晚抓捕“四人帮”后，其部分核心成员也被控制，随后“文化大革命”十年内乱终告结束。当时在全中国一公布，其势力马上瓦解，人们举杯庆贺。此后数年时间，邓小平、胡耀邦借平反冤假错案、公开审判四人帮，稳定民心，并开始“改革开放”发展经济。</p>
 <p>现代战争中，美军也使用了“斩首行动”，即通过精准打击，首先消灭对方的首脑，彻底摧毁对方的抵抗意志。猎杀本?拉登就是一个极好的例子。</p>
-<p>分析认为，当今的习近平当局正处于乱局之中，但是公开宣布抓捕<ahref="https://github.com/spd2854/djy/blob/master/gb/tag/%E6%B1%9F%E6%B3%BD%E6%B0%91.md#1">江泽民</a>的条件也完全成熟。中国社会到了一个最为关键的时刻，习近平完全可以魄力再大些，公开抓捕江泽民，一举令江氏贪腐集团瓦解。如此，习近平可破乱局，可稳民心，可定大局，从而使中国迈入新的转折点。</p>
-<p><h2>一、抓了<ahref="https://github.com/spd2854/djy/blob/master/gb/tag/%E6%B1%9F%E6%B3%BD%E6%B0%91.md#1">江泽民</a> 习近平可破乱局</h2>
+<p>分析认为，当今的习近平当局正处于乱局之中，但是公开宣布抓捕<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%B1%9F%E6%B3%BD%E6%B0%91.md#1">江泽民</a>的条件也完全成熟。中国社会到了一个最为关键的时刻，习近平完全可以魄力再大些，公开抓捕江泽民，一举令江氏贪腐集团瓦解。如此，习近平可破乱局，可稳民心，可定大局，从而使中国迈入新的转折点。</p>
+<p><h2>一、抓了<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%B1%9F%E6%B3%BD%E6%B0%91.md#1">江泽民</a> 习近平可破乱局</h2>
 <p><h2>中国经济面临严峻人民币贬值的压力</h2>
 <p>目前，中国大陆经济面临下行巨大压力。房地产业、制造业等持续下滑，股市大幅下跌，人民币贬值压力巨大，资金外流严重。</p>
 <p>8月11日起3天，中共央行突然调低人民币中间价，引发人民币大幅贬值，随后新兴市场的货币出现大幅波动。对于这次出人预料的举措，官方自称是为了“人民币国际化”。另有分析认为，人民币贬值是因为中共为了维持人民币坚挺已付出了相当大的财务成本。</p>
@@ -34,7 +34,7 @@
 <p>网民“挑灯看吴钩”撰写的《高喊“别让李嘉诚跑了”是高级黑！》一文在网上广为流传。文章说：“在目前中国经济出现问题的关键时刻，??却匪夷所思的高喊什么‘别让李嘉诚跑了’！试问，你让在华的外资企业怎么想？你让有意向准备来华的世界企业怎么办？以后谁还会来中国，谁还会再信中共？”</p>
 <p>文章还说，高喊“别让李嘉诚跑了”是在黑谁？看似忧民爱国，却是误国害民的“高级黑”，和在泰国机场高唱国歌抗议一样，实质是帮倒忙。与其高喊有害无益的“不让跑”，还不如静下心来反思一下自己，问一句李嘉诚为什么要跑！</p>
 <p>“李嘉诚跑路事件”出来后的第三天，即9月15日上午，习近平主持召开了中共“中央全面深化改革领导小组第十六次会议”并发表讲话。与会中，习近平强调，“以开放促改革、促发展”“改革和开放相辅相成、相互促进，改革必然要求开放，开放也必然要求改革”等。</p>
-<p>时事评论员石久天说，<ahref="https://github.com/spd2854/djy/blob/master/gb/tag/%E5%88%98%E4%BA%91%E5%B1%B1.md#1">刘云山</a>文宣系的这篇文章，打着所谓“爱国”的旗号，以文革式的做法吓唬李嘉诚，实质是对海外的投资者，乃至中国大陆的富人，都起到了反面的效果，直接打击的就是投资中国的信心。</p>
+<p>时事评论员石久天说，<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%88%98%E4%BA%91%E5%B1%B1.md#1">刘云山</a>文宣系的这篇文章，打着所谓“爱国”的旗号，以文革式的做法吓唬李嘉诚，实质是对海外的投资者，乃至中国大陆的富人，都起到了反面的效果，直接打击的就是投资中国的信心。</p>
 <p>石久天分析，“这是文宣系对付习近平的标准手法：扭曲习的本意，对一件事无限放大，把赃栽回习的身上。”</p>
 <p>几乎同一时间，在大陆最大的论坛网站凯迪网同样出现了几篇配合打击李嘉诚的文章。9月17日，凯迪网上一篇题为《政策左转，外资民企都预感到危险，开始逃跑》在网上热传。</p>
 <p>文章说：“近段时间以来，连华为、小米、联想、TCL等民族企业也开始撤离中国。商人们撤退与逃跑，尤其是中国自己的商人们开始逃跑，最根本的原因恐怕还不是对中国经济形势的不乐观，而是在于对政治与经济政策的走势没有信心，对权力的恐怖扩张充满恐惧。”</p>
@@ -53,17 +53,17 @@
 <p>张晓明在《基本法》颁布25周年研讨会上进行26分钟发言，称香港从来都不实行“三权分立”，香港的政治体制是在中央政府下、以行政长官为核心的行政主导体制，特首超然于行政、立法、司法三权之上；又称特首有“双首长”身份，既是政府的首长，也是整个特区的首长，不仅要向特区负责，同时亦要向中央负责。</p>
 <p>外界质疑其说法违反《基本法》，毫无法理根据，明显是政治挑衅，甚至连建制派都解画降温。</p>
 <p>张晓明突然由“封口”到“反口”，称香港没有“三权分立”，被视为有意借有关“一国两制”及争议话题重新挑起政治争拗，时机并不寻常。</p>
-<p>张晓明此番言论的同一天， 新华社在大陆发表《别让李嘉诚跑了》，同时挑起事端。当时还有传言，负责港澳事务的人大委员长<ahref="https://github.com/spd2854/djy/blob/master/gb/tag/%E5%BC%A0%E5%BE%B7%E6%B1%9F.md#1">张德江</a>在未来两个月内，要就一年来的香港政改一事及政改后的特区情况提交检讨报告。</p>
+<p>张晓明此番言论的同一天， 新华社在大陆发表《别让李嘉诚跑了》，同时挑起事端。当时还有传言，负责港澳事务的人大委员长<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%BC%A0%E5%BE%B7%E6%B1%9F.md#1">张德江</a>在未来两个月内，要就一年来的香港政改一事及政改后的特区情况提交检讨报告。</p>
 <p>此后3天的9月18日，泛民召开记者会，宣布成立与北京沟通的内部联络小组。公民党立法会议员郭荣铿表示，不认为中联办主任张晓明持平客观地向中央反映香港情况，与其通过中联办，不如直接与中央沟通。他更批评，张晓明每次发表言论都是“找架吵”，过去和现在都看不到他会反映香港人的意见，未来也看不到。</p>
 <p>熟悉中港事务的中国问题专家季达表示，今次事件很像长期把持香港事务的江派二号人物曾庆红的手段，先借冲击香港的核心价值来挑起事端，激起民愤，将这些怨气转移到对手身上，试图翻炒去年白皮书和人大8.31决定封杀真普选引发雨伞运动的模式，将香港拉入中南海搏击的漩涡。</p>
-<p>去年9月26日至12月15日在香港发生了一系列争取真普选的公民抗命运动。历时79天的雨伞运动将届一周年。去年在中共江派政治局常委<ahref="https://github.com/spd2854/djy/blob/master/gb/tag/%E5%BC%A0%E5%BE%B7%E6%B1%9F.md#1">张德江</a>的操作下，中共抛出冲击“一国两制”的白皮书和人大8.31决定引爆示威浪潮。</p>
-<p>据知情人士透露，白皮书是在江派政治局常委<ahref="https://github.com/spd2854/djy/blob/master/gb/tag/%E5%88%98%E4%BA%91%E5%B1%B1.md#1">刘云山</a>和张德江的运作下抛出的，是江派精心部署、用以激起港人民愤，造成香港局势升温，其目的是为了向习近平当局叫板。其后，张德江把持的中共人大常委会抛出违反《基本法》的8.31决定封杀真普选，最终触发罢课和雨伞运动。</p>
+<p>去年9月26日至12月15日在香港发生了一系列争取真普选的公民抗命运动。历时79天的雨伞运动将届一周年。去年在中共江派政治局常委<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%BC%A0%E5%BE%B7%E6%B1%9F.md#1">张德江</a>的操作下，中共抛出冲击“一国两制”的白皮书和人大8.31决定引爆示威浪潮。</p>
+<p>据知情人士透露，白皮书是在江派政治局常委<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%88%98%E4%BA%91%E5%B1%B1.md#1">刘云山</a>和张德江的运作下抛出的，是江派精心部署、用以激起港人民愤，造成香港局势升温，其目的是为了向习近平当局叫板。其后，张德江把持的中共人大常委会抛出违反《基本法》的8.31决定封杀真普选，最终触发罢课和雨伞运动。</p>
 <p>大纪元曾报导，江泽民的“大内总管”曾庆红被曝在港澳协调会上曾说：“香港出现政治混乱，要害是‘夺权’、是搞‘政治独立体’??，越乱越好办，按既定方针解决，香港正能量已消亡时就剩负资产”。</p>
 <p><h2>天津爆炸背后有江派运作痕迹</h2>
 <p>今年8月12日，天津发生了震惊中外的特大爆炸事件。到目前为止，真相仍然扑朔迷离。当天早7点多，中共官媒《人民日报》刚刚发表评论文章《习近平治国理政1000天》。话音一落，当晚天津滨海新区发生了爆炸。</p>
 <p>在爆炸发生后的第二天，即8月13日，海外茉莉花网站即发表了署名刘刚的文章——《天津大爆炸是针对习近平的恐怖袭击》。文章说：“根据阴谋论，天津大爆炸也必定就是中共权斗的副产品，是中共在野一方所制造的人间惨祸，其目的就是向中共当权者进行威胁、恫吓及制造危机麻烦，进而要挟习近平妥协、就范，甚至是以此灾祸来弹劾习近平。”</p>
-<p>海外媒体报导指，天津爆炸事件与中共政治局常委<ahref="https://github.com/spd2854/djy/blob/master/gb/tag/%E5%BC%A0%E9%AB%98%E4%B8%BD.md#1">张高丽</a>有关。爆炸涉事企业瑞海国际，被指是由其亲家在背后操控；爆炸所在地滨海新区，又是张高丽当年任天津市委书记时候“大力发展”的地段；原江苏省委秘书长赵少麟的儿子赵晋，据称“或多或少”涉案，他能在天津建立庞大的地产王国，背后也是张高丽。</p>
-<p><ahref="https://github.com/spd2854/djy/blob/master/gb/tag/%E5%BC%A0%E9%AB%98%E4%B8%BD.md#1">张高丽</a>涉天津爆炸案似也被港媒证实。8月23日的《苹果日报》引用北京消息人士的话称，习近平当晚通宵召开常委会议，涉案的瑞海国际物流有强力保护伞。还有港媒称张高丽的养女与瑞海国际实际控制人是同学。</p>
+<p>海外媒体报导指，天津爆炸事件与中共政治局常委<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%BC%A0%E9%AB%98%E4%B8%BD.md#1">张高丽</a>有关。爆炸涉事企业瑞海国际，被指是由其亲家在背后操控；爆炸所在地滨海新区，又是张高丽当年任天津市委书记时候“大力发展”的地段；原江苏省委秘书长赵少麟的儿子赵晋，据称“或多或少”涉案，他能在天津建立庞大的地产王国，背后也是张高丽。</p>
+<p><ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%BC%A0%E9%AB%98%E4%B8%BD.md#1">张高丽</a>涉天津爆炸案似也被港媒证实。8月23日的《苹果日报》引用北京消息人士的话称，习近平当晚通宵召开常委会议，涉案的瑞海国际物流有强力保护伞。还有港媒称张高丽的养女与瑞海国际实际控制人是同学。</p>
 <p><h2>中共的乱局</h2>
 <p>自“十八大”以来，中共当局强力反腐，江泽民集团一直在动用所有资源进行反扑和对抗。从2014年春夏各地发生的恐怖袭击血案，到2014年9月利用人大白皮书制造的香港危机；从今年6月中国股市的股灾到8月12日的天津大爆炸，都有江派势力在其中运作的痕迹。</p>
 <p>近年，中国社会动荡不安，意外事故、群体事件频发。港媒报导说，仅今年上半年中国发生群体游行、示威抗争事件8,435件，涉及128个地区，有142万6,700多参与人次。习近平指斥背后有地方党政部门领导干部怀着政治动机，唆使、支持职工、社会人士搞街上政治运动，把问题的矛盾、要害转向中央，给中央施压、添乱。</p>
@@ -76,7 +76,7 @@
 <p>石九天表示，近期股市暴跌，还有传闻证监会20多名官员被查，中信证券联手证监会官员、财经媒体做空中国股市，这些官员很可能都是在“十八大”后继续犯案，这都显示很多官员表面赞同反腐，实际仍在腐败。</p>
 <p>“抓捕有中国腐败总教练之称的江泽民，将会对无论是江系的官员也好，其他派系的官员也好，甚至对不作为的官员们都会造成强大的震慑，也会对整个官场显示当局反腐的真正诚意和决心。中国社会已到了一个最为关键的时刻，习近平完全可以魄力再大些，公开宣布抓捕江泽民。如此，习近平可破乱局，中国方能稳定；抓捕江泽民也是民心所向。”#</p>
 <p>（接下文）</p>
-<p><b><ahref="https://github.com/spd2854/djy/blob/master/gb/15/9/23/n4533859.md#1"target=_blank>系列分析报导之二</a></b></p>
+<p><b><ahref="https://github.com/hxcaik307/djy/blob/master/gb/15/9/23/n4533859.md#1"target=_blank>系列分析报导之二</a></b></p>
 <p>责任编辑：林锐</p>
 <p>
 	
@@ -84,36 +84,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/spd2854/djy/blob/master/gb/15/4/12/n4409652.md#1">传郭伯雄10日被抓  被移至秘密地点</a></li>
-<li><a href="https://github.com/spd2854/djy/blob/master/gb/15/7/9/n4476217.md#1">习近平的股市信心战 评：抓江是重大利好</a></li>
-<li><a href="https://github.com/spd2854/djy/blob/master/gb/15/7/16/n4482215.md#1">江泽民“国师”被警方带走 涉杀人案</a></li>
-<li><a href="https://github.com/spd2854/djy/blob/master/gb/15/7/25/n4488694.md#1">【7·25翻墙必看】周本顺被抓 江派余孽幻想破灭</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/4/12/n4409652.md#1">传郭伯雄10日被抓  被移至秘密地点</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/9/n4476217.md#1">习近平的股市信心战 评：抓江是重大利好</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/16/n4482215.md#1">江泽民“国师”被警方带走 涉杀人案</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/25/n4488694.md#1">【7·25翻墙必看】周本顺被抓 江派余孽幻想破灭</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/19/n11123506.md#1" target="_blank">林辉：朱德曾被德国驱逐 效力中共晚景凄凉</a></li><li><a href="https://github.com/spd2854/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/15/n11115255.md#1" target="_blank">美国人权报告 中国章节一值得关注的进展</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/4/10/n10291663.md#1" target="_blank">林辉：热爱自由的北大“右派”之出局人生</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/5/5/n9109957.md#1" target="_blank">永远的传奇—从长春到世界（下）</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/spd2854/djy/blob/master/gb/20/5/5/n12085546.md#1">萧茗采访班农：你见了国内出逃科学家吗</a></li>
-<li><a href="https://github.com/spd2854/djy/blob/master/gb/20/5/5/n12083781.md#1">研究病毒获重要发现 美华裔学者突遇害</a></li>
-<li><a href="https://github.com/spd2854/djy/blob/master/gb/20/5/5/n12085740.md#1">华裔病毒研究者遭枪杀 更多细节流出</a></li>
-<li><a href="https://github.com/spd2854/djy/blob/master/gb/20/5/5/n12085708.md#1">美B-1B轰炸机出动 中共少将为武统台湾降温</a></li>
-<li><a href="https://github.com/spd2854/djy/blob/master/gb/20/5/5/n12083374.md#1">【十字路口】美领军索赔 万亿关税警告中共</a></li>
-<li><a href="https://github.com/spd2854/djy/blob/master/gb/20/5/4/n12081675.md#1">刘真离世44天 辛龙深夜发文悼亡妻</a></li>
-<li><a href="https://github.com/spd2854/djy/blob/master/gb/20/5/4/n12082975.md#1">“雷神”为巨石强森庆生 石头蛋糕笑翻网友</a></li>
-<li><a href="https://github.com/spd2854/djy/blob/master/gb/20/5/5/n12085409.md#1">传遭官方禁止直播卖货 范冰冰公开回应</a></li>
-<li><a href="https://github.com/spd2854/djy/blob/master/gb/20/5/4/n12082574.md#1">IG用英文勉励网友 范冰冰微博异样噤声</a></li>
-<li><a href="https://github.com/spd2854/djy/blob/master/gb/20/5/5/n12084156.md#1">詹子晴32岁总资产上千万 靠2招成副业女王</a></li>
-<li><a href="https://github.com/spd2854/djy/blob/master/gb/20/5/5/n12083937.md#1">美国女童写信给在天堂的小狗 意外收到回信</a></li>
-<li><a href="https://github.com/spd2854/djy/blob/master/gb/20/4/20/n12046031.md#1">大总统徐世昌测一字 奇人料定战争结局</a></li>
-<li><a href="https://github.com/spd2854/djy/blob/master/gb/20/4/20/n12044745.md#1">人居两地 情发一心  宝玉和黛玉的心灵相知</a></li>
-<li><a href="https://github.com/spd2854/djy/blob/master/gb/20/5/4/n12081017.md#1">日本便当店行善 儿童购买可等长大后再付钱</a></li>
-<li><a href="https://github.com/spd2854/djy/blob/master/gb/20/3/26/n11977935.md#1">【品读宋词】词中帝王 风流千古</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615078.md#1">刘凯文：香港抗疫政策混乱 遗体滞留急症室</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614595.md#1">【直播】俄乌大战 拜登首次国情咨文演说</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/spd2854/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/spd2854/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/15/9/22/n4533064.htm">抓捕江泽民 习近平可破乱局</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/15/9/22/n4533064.htm">抓捕江泽民 习近平可破乱局</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/spd2854/djy/blob/master/gb/15/9/22/n4533064.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/spd2854/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/spd2854/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/spd2854/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/spd2854/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/spd2854/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/spd2854/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/spd2854/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/spd2854/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/spd2854/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/spd2854/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/spd2854/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/spd2854/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/spd2854/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/spd2854/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/spd2854/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/spd2854/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/spd2854/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/spd2854/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/spd2854/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/spd2854/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/spd2854/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/spd2854/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/spd2854/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/spd2854/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/spd2854/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/spd2854/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/spd2854/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/spd2854/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/spd2854/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/spd2854/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/spd2854/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/spd2854/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/spd2854/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/spd2854/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/spd2854/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/spd2854/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/spd2854/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/spd2854/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/spd2854/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/spd2854/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/spd2854/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/spd2854/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/spd2854/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/spd2854/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/spd2854/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/spd2854/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/spd2854/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/spd2854/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/15/9/22/n4533064.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
